@@ -1,3 +1,9 @@
+2001-04-10  Andreas Schwab  <schwab@suse.de>
+
+	* sysdeps/m68k/fpu/e_pow.c: Correct handling of some exceptional
+	values.
+	* sysdeps/m68k/fpu/e_scalb.c: Likewise.
+
 2001-04-09  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/sparc/sparc32/sparcv9/Dist: Add hp-timing.c.
